--- a/CarShowroomFrontEnd/src/app/components/cars/add/form/form.component.html
+++ b/CarShowroomFrontEnd/src/app/components/cars/add/form/form.component.html
@@ -90,6 +90,6 @@
     <mat-icon>arrow_back</mat-icon>
   </button>
   <button (click)="onSubmit()" [disabled]="carForm.invalid" [ngClass]="{'disabled': carForm.invalid}" mat-fab class="edit-button">
-    <mat-icon>add</mat-icon>
+    <mat-icon>check</mat-icon>
   </button>
 </div>
