--- a/CarShowroomFrontEnd/src/app/components/user/chat/chat.component.html
+++ b/CarShowroomFrontEnd/src/app/components/user/chat/chat.component.html
@@ -29,30 +29,32 @@
   </div>
 </ng-container>
 <ng-container *ngIf="clicked">
-  <div id="chat-window" class="chat-window">
-    <div id="messages" class="messages">
-      <div *ngFor="let message of messages; index as i" [ngStyle]="{'background-color': i % 2 === 1 ? '#99ff66' : '#adebad' }" class="message">
-        <div class="usernametext">
-          <p>
-            <b>
-              {{ message.senderName }}
-            </b>
-          </p>
-          <p>
-            {{ message.text }}
-          </p>
-        </div>
-        <span style="width: 100%;"></span>
-        <div class="time">
-          <p>
-            {{ message.sent.substr(0, 10) }} {{ message.sent.substr(11, 5) }}
-          </p>
+  <div class="mainChat">
+    <div id="chat-window" class="chat-window">
+      <div id="messages" class="messages">
+        <div *ngFor="let message of messages; index as i" [ngStyle]="{'background-color': message.senderId === userId ? '#e0ebeb' : '#d6f5d6' }" class="message">
+          <div class="usernametext">
+            <p style="margin-bottom: 5px;">
+              <b>
+                {{ message.senderName }}
+              </b>
+            </p>
+            <p>
+              {{ message.text }}
+            </p>
+          </div>
+          <span style="width: 100%;"></span>
+          <div class="time">
+            <p>
+              {{ message.sent.substr(0, 10) }} {{ message.sent.substr(11, 5) }}
+            </p>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <div class="input">
-    <input type="text" class="textbox">
-    <button class="send-button">Send</button>
+    <div class="input">
+      <input type="text" class="textbox">
+      <button class="send-button">Send</button>
+    </div>
   </div>
 </ng-container>
