--- a/CarShowroomFrontEnd/src/app/components/user/chat/chat.component.html
+++ b/CarShowroomFrontEnd/src/app/components/user/chat/chat.component.html
@@ -14,7 +14,7 @@
            placeholder="Pick one"
            aria-label="Number"
            matInput
-           [formControl]="myControl"
+           [formControl]="recipientControl"
            [matAutocomplete]="auto">
         <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
           <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
@@ -22,39 +22,41 @@
           </mat-option>
         </mat-autocomplete>
       </mat-form-field>
-      <button (click)="startChat()" [disabled]="myControl.invalid" [ngClass]="{'disabled': myControl.invalid}" mat-fab class="edit-button">
+      <button (click)="startChat()" [disabled]="recipientControl.invalid" [ngClass]="{'disabled': recipientControl.invalid}" mat-fab class="edit-button">
         <mat-icon>check</mat-icon>
       </button>
     </div>
   </div>
-</ng-container>
-<ng-container *ngIf="clicked">
-  <div class="mainChat">
-    <div id="chat-window" class="chat-window">
-      <div id="messages" class="messages">
-        <div *ngFor="let message of messages; index as i" [ngStyle]="{'background-color': message.senderId === userId ? '#e0ebeb' : '#d6f5d6' }" class="message">
-          <div class="usernametext">
-            <p style="margin-bottom: 5px;">
-              <b>
-                {{ message.senderName }}
-              </b>
-            </p>
-            <p>
-              {{ message.text }}
-            </p>
-          </div>
-          <span style="width: 100%;"></span>
-          <div class="time">
-            <p>
-              {{ message.sent.substr(0, 10) }} {{ message.sent.substr(11, 5) }}
-            </p>
+  <ng-container *ngIf="clicked">
+    <div class="mainChat">
+      <div id="chat-window" class="chat-window">
+        <div id="messages" class="messages">
+          <div *ngFor="let message of messages; index as i" [ngStyle]="{'background-color': message.senderId === userId ? '#e0ebeb' : '#d6f5d6' }" class="message">
+            <div class="usernametext">
+              <p style="margin-bottom: 5px;">
+                <b>
+                  {{ message.senderName }}
+                </b>
+              </p>
+              <p>
+                {{ message.text }}
+              </p>
+            </div>
+            <span style="width: 100%;"></span>
+            <div class="time">
+              <p>
+                {{ message.sent.substr(0, 10) }} {{ message.sent.substr(11, 5) }}
+              </p>
+            </div>
           </div>
         </div>
       </div>
+      <div class="input">
+        <input id="text" type="text" class="textbox"
+          [formControl]="textControl"
+        >
+        <button (click)="sendMessage()" class="send-button">Send</button>
+      </div>
     </div>
-    <div class="input">
-      <input type="text" class="textbox">
-      <button class="send-button">Send</button>
-    </div>
-  </div>
+  </ng-container>
 </ng-container>
