--- a/CarShowroomFrontEnd/src/app/components/user/chat/chat.component.css
+++ b/CarShowroomFrontEnd/src/app/components/user/chat/chat.component.css
@@ -65,7 +65,6 @@
 
 .message {
   display: flex;
-  flex-direction: row;
   margin: 0 0 15px 0;
   padding: 3px 3px 3px 5px;
 }
@@ -82,6 +81,10 @@
 .send-button {
   width: 17vw;
   height: 6vh;
+}
+
+.time {
+  float: right;
 }
 
 @media screen and (min-width: 1000px) {
@@ -111,5 +114,9 @@
   .send-button {
     width: 10vw;
     height: 6vh;
+  }
+
+  .time {
+    float: right;
   }
 }
