--- a/CarShowroomFrontEnd/src/app/components/user/chat/chat.component.html
+++ b/CarShowroomFrontEnd/src/app/components/user/chat/chat.component.html
@@ -32,7 +32,7 @@
       <div id="chat-window" class="chat-window">
         <div id="messages" class="messages">
           <div *ngFor="let message of messages; index as i" [ngStyle]="{'background-color': message.senderId === userId ? '#e0ebeb' : '#d6f5d6' }" class="message">
-            <div class="usernametext">
+            <div class="usernametext" style="min-width: 45vw;">
               <p style="margin-bottom: 5px;">
                 <b>
                   {{ message.senderName }}
@@ -42,10 +42,12 @@
                 {{ message.text }}
               </p>
             </div>
-            <span style="width: 100%;"></span>
             <div class="time">
               <p>
-                {{ message.sent.substr(0, 10) }} {{ message.sent.substr(11, 5) }}
+                {{ message.sent.substr(0, 10) }}
+              </p>
+              <p>
+                {{ message.sent.substr(11, 5) }}
               </p>
             </div>
           </div>
