--- a/CarShowroomFrontEnd/src/app/components/user/chat/chat.component.css
+++ b/CarShowroomFrontEnd/src/app/components/user/chat/chat.component.css
@@ -83,8 +83,14 @@
   height: 6vh;
 }
 
+.usernametext {
+  width: 80vw;
+}
+
 .time {
   float: right;
+  min-width: 75px;
+  width: 75px;
 }
 
 @media screen and (min-width: 1000px) {
