--- a/CarShowroomFrontEnd/src/app/components/user/chat/chat.component.html
+++ b/CarShowroomFrontEnd/src/app/components/user/chat/chat.component.html
@@ -22,8 +22,11 @@
           </mat-option>
         </mat-autocomplete>
       </mat-form-field>
-      <button (click)="startChat()" [disabled]="recipientControl.invalid" [ngClass]="{'disabled': recipientControl.invalid}" mat-fab class="edit-button">
-        <mat-icon>check</mat-icon>
+      <button (click)="startChat()"
+        [disabled]="recipientControl.invalid"
+        [ngClass]="{'disabled': recipientControl.invalid}"
+        mat-fab class="edit-button">
+          <mat-icon>check</mat-icon>
       </button>
     </div>
   </div>
