app-loader exception for sendMessage

--- a/CarShowroomFrontEnd/src/app/components/user/chat/chat.component.html
+++ b/CarShowroomFrontEnd/src/app/components/user/chat/chat.component.html
@@ -57,10 +57,10 @@
         </div>
       </div>
       <div class="input">
-        <input id="text" type="text" class="textbox"
+        <input #text id="text" type="text" class="textbox"
           [formControl]="textControl"
         >
-        <button (click)="sendMessage()" class="send-button">Send</button>
+        <button (click)="sendMessage(); text.value = ''" class="send-button">Send</button>
       </div>
     </div>
   </ng-container>
