--- a/CarShowroomFrontEnd/src/app/main-nav/main-nav.component.html
+++ b/CarShowroomFrontEnd/src/app/main-nav/main-nav.component.html
@@ -10,7 +10,7 @@
       <a mat-list-item [routerLink]="['/add']">New offer</a>
       <a mat-list-item [routerLink]="['/chat']">Chat</a>
       <a *ngIf="!isLogged" mat-list-item [routerLink]="['/login']">Login</a>
-      <a *ngIf="isLogged" (click)="logOut()" mat-list-item>Hello {{ username }}!</a>
+      <a *ngIf="isLogged" (click)="usernameClick()" mat-list-item>Hello {{ username }}!</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -33,7 +33,7 @@
       <span style="width: 100%;"></span>
       <div class="menu-links login-button" *ngIf="!(isHandset$ | async)">
         <a *ngIf="!isLogged" [routerLink]="['/login']">Login</a>
-        <a *ngIf="isLogged" (click)="logOut()" style="cursor: pointer;">Hello {{ username }}!</a>
+        <a *ngIf="isLogged" (click)="usernameClick()" style="cursor: pointer;">Hello {{ username }}!</a>
       </div>
     </mat-toolbar>
     <ng-content></ng-content>
