--- a/CarShowroomFrontEnd/src/app/components/user/profile/profile.component.css
+++ b/CarShowroomFrontEnd/src/app/components/user/profile/profile.component.css
@@ -44,6 +44,21 @@
   margin-top: 15px;
 }
 
+.center {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
+}
+
+.center h3 {
+  font-weight: bolder;
+  color: green;
+  cursor: pointer;
+  margin-bottom: 50px;
+}
+
 @media screen and (min-width: 768px) {
   .main {
     margin: 50px;
