--- a/CarShowroomFrontEnd/src/app/components/cars/home/home.component.html
+++ b/CarShowroomFrontEnd/src/app/components/cars/home/home.component.html
@@ -24,7 +24,7 @@
         <img class="logo" src="https://www.oprojektowaniu.pl/wp-content/uploads/2017/02/official-linkedin-logo-tile-300x300.png">
       </a>
       <a href="https://github.com/agajek777" target="_blank">
-        <img class="logo" src="https://image.flaticon.com/icons/png/512/37/37318.png">
+        <img class="logo" src="https://cdn-icons-png.flaticon.com/512/25/25231.png">
       </a>
       <a href="https://stackoverflow.com/users/13636701/agajek777" target="_blank">
         <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ef/Stack_Overflow_icon.svg/768px-Stack_Overflow_icon.svg.png">
